завершает позиционирование header и hero

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,35 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="page-header">
-      <a class="logo link" href="">Web<span class="header-logo">Studio</span></a>
-      <nav class="navigation">
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a class="nav-list-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="nav-list-item"><a class="nav-list-link link current" href="">Портфолио</a></li>
-          <li class="nav-list-item"><a class="nav-list-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container header-conteiner">
+        <a class="logo link" href="">Web<span class="header-logo">Studio</span></a>
+        <nav class="navigation">
+          <ul class="nav-list list">
+            <li class="nav-list-item">
+              <a class="nav-list-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-link link current" href="">Портфолио</a>
+            </li>
+            <li class="nav-list-item"><a class="nav-list-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <a class="contact-link link header-mail" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
 
     <main>
