--- a/index.html
+++ b/index.html
@@ -22,125 +22,139 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="logo link" href="">Web<span class="header-logo">Studio</span></a>
-      <nav class="navigation">
-        <ul class="nav-list list">
-          <li class="nav-list-item"><a class="nav-list-link link current" href="">Студия</a></li>
-          <li class="nav-list-item">
-            <a class="nav-list-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-list-item"><a class="nav-list-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+      <div class="container header-conteiner">
+        <a class="logo link" href="">Web<span class="header-logo">Studio</span></a>
+        <nav class="navigation">
+          <ul class="nav-list list">
+            <li class="nav-list-item"><a class="nav-list-link link current" href="">Студия</a></li>
+            <li class="nav-list-item">
+              <a class="nav-list-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-list-item"><a class="nav-list-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <a class="contact-link link header-mail" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
       <section class="features">
-        <ul class="list">
-          <li>
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/img-1.jpg" alt="разработчик пишет код" width="370" height="294" />
-          </li>
-          <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="разработчик с телефоном за ноутбуком"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="дизайнер подбирает оттенок"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <img src="./images/img-1.jpg" alt="разработчик пишет код" width="370" height="294" />
+            </li>
+            <li>
+              <img
+                src="./images/img-2.jpg"
+                alt="разработчик с телефоном за ноутбуком"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img-3.jpg"
+                alt="дизайнер подбирает оттенок"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-card">
-            <img src="./images/foto-1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
-            <h3 class="team-card-title">Игорь Демьяненко</h3>
-            <p class="team-card-description" lang="en">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/foto-2.jpg" alt="фото Ольга Репина" width="270" height="260" />
-            <h3 class="team-card-title">Ольга Репина</h3>
-            <p class="team-card-description" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/foto-3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
-            <h3 class="team-card-title">Николай Тарасов</h3>
-            <p class="team-card-description" lang="en">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/foto-4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
-            <h3 class="team-card-title">Михаил Ермаков</h3>
-            <p class="team-card-description" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-card">
+              <img src="./images/foto-1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
+              <h3 class="team-card-title">Игорь Демьяненко</h3>
+              <p class="team-card-description" lang="en">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img src="./images/foto-2.jpg" alt="фото Ольга Репина" width="270" height="260" />
+              <h3 class="team-card-title">Ольга Репина</h3>
+              <p class="team-card-description" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img src="./images/foto-3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
+              <h3 class="team-card-title">Николай Тарасов</h3>
+              <p class="team-card-description" lang="en">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img src="./images/foto-4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
+              <h3 class="team-card-title">Михаил Ермаков</h3>
+              <p class="team-card-description" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo link" href="">Web<span class="footer-logo">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="map-link link"
-              href="https://goo.gl/maps/sKyNyaU12oT2qco99"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo link" href="">Web<span class="footer-logo">Studio</span></a>
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                class="map-link link"
+                href="https://goo.gl/maps/sKyNyaU12oT2qco99"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
