завершает оформление css

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
           <button class="hero-btn" type="button">Заказать услугу</button>
         </div>
       </section>
-      <section class="features">
+      <section class="features section">
         <div class="container">
-          <ul class="list">
-            <li>
+          <ul class="features-list list">
+            <li class="features-list-item">
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -77,10 +77,10 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list">
+          <ul class="business list">
             <li>
               <img src="./images/img-1.jpg" alt="разработчик пишет код" width="370" height="294" />
             </li>
@@ -103,29 +103,37 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-card">
               <img src="./images/foto-1.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
-              <h3 class="team-card-title">Игорь Демьяненко</h3>
-              <p class="team-card-description" lang="en">Product Designer</p>
+              <div class="team-card-text">
+                <h3 class="team-card-title">Игорь Демьяненко</h3>
+                <p class="team-card-description" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img src="./images/foto-2.jpg" alt="фото Ольга Репина" width="270" height="260" />
-              <h3 class="team-card-title">Ольга Репина</h3>
-              <p class="team-card-description" lang="en">Frontend Developer</p>
+              <div class="team-card-text">
+                <h3 class="team-card-title">Ольга Репина</h3>
+                <p class="team-card-description" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img src="./images/foto-3.jpg" alt="фото Николай Тарасов" width="270" height="260" />
-              <h3 class="team-card-title">Николай Тарасов</h3>
-              <p class="team-card-description" lang="en">Marketing</p>
+              <div class="team-card-text">
+                <h3 class="team-card-title">Николай Тарасов</h3>
+                <p class="team-card-description" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img src="./images/foto-4.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
-              <h3 class="team-card-title">Михаил Ермаков</h3>
-              <p class="team-card-description" lang="en">UI Designer</p>
+              <div class="team-card-text">
+                <h3 class="team-card-title">Михаил Ермаков</h3>
+                <p class="team-card-description" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -136,8 +144,8 @@
       <div class="container">
         <a class="logo link" href="">Web<span class="footer-logo">Studio</span></a>
         <address>
-          <ul class="list">
-            <li>
+          <ul class="address-list list">
+            <li class="address-list-item">
               <a
                 class="map-link link"
                 href="https://goo.gl/maps/sKyNyaU12oT2qco99"
@@ -146,10 +154,10 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="address-list-item">
               <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="address-list-item">
               <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
