--- a/portfolio.html
+++ b/portfolio.html
@@ -43,106 +43,135 @@
     </header>
 
     <main>
-      <section>
-        <ul class="buttons list">
-          <li>
-            <button class="btn" type="button">Все</button>
-          </li>
-          <li>
-            <button class="btn" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="btn" type="button">Приложения</button>
-          </li>
-          <li>
-            <button class="btn" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
+      <div class="container">
+        <section class="section">
+          <ul class="buttons list">
+            <li class="buttons-item">
+              <button class="btn" type="button">Все</button>
+            </li>
+            <li class="buttons-item">
+              <button class="btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="buttons-item">
+              <button class="btn" type="button">Приложения</button>
+            </li>
+            <li class="buttons-item">
+              <button class="btn" type="button">Дизайн</button>
+            </li>
+            <li class="buttons-item">
+              <button class="btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="portfolio list">
-          <li class="project">
-            <img src="./images/portfolio-1.jpg" alt="сайт на ноутбуке" width="370" height="294" />
-            <h3 class="project-title">Технокряк</h3>
-            <p class="project-description">Веб-сайт</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/portfolio-2.jpg"
-              alt="два баскетболиста с мячом"
-              width="370"
-              height="294"
-            />
-            <h3 class="project-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-            <p class="project-description">Дизайн</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-3.jpg" alt="логотип ресторана" width="370" height="294" />
-            <h3 class="project-title">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="project-description">Приложение</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-4.jpg" alt="чёрные наушники" width="370" height="294" />
-            <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
-            <p class="project-description">Маркетинг</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-5.jpg" alt="две коробочки" width="370" height="294" />
-            <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
-            <p class="project-description">Приложение</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-6.jpg" alt="сайт на мониторе" width="370" height="294" />
-            <h3 class="project-title" lang="en">Inspiration has no Borders</h3>
-            <p class="project-description">Веб-сайт</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-7.jpg" alt="открытая книга" width="370" height="294" />
-            <h3 class="project-title">Издание <span lang="en">Limited Edition</span></h3>
-            <p class="project-description">Дизайн</p>
-          </li>
-          <li class="project">
-            <img src="./images/portfolio-8.jpg" alt="бирка на шнурке" width="370" height="294" />
-            <h3 class="project-title">Проект <span lang="en">LAB</span></h3>
-            <p class="project-description">Маркетинг</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/portfolio-9.jpg"
-              alt="руки на клавиатуре ноутбука"
-              width="370"
-              height="294"
-            />
-            <h3 class="project-title" lang="en">Growing Business</h3>
-            <p class="project-description">Приложение</p>
-          </li>
-        </ul>
-      </section>
+          <ul class="portfolio list">
+            <li class="project">
+              <img src="./images/portfolio-1.jpg" alt="сайт на ноутбуке" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title">Технокряк</h3>
+                <p class="project-description">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/portfolio-2.jpg"
+                alt="два баскетболиста с мячом"
+                width="370"
+                height="294"
+              />
+              <div class="project-text">
+                <h3 class="project-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h3>
+                <p class="project-description">Дизайн</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/portfolio-3.jpg"
+                alt="логотип ресторана"
+                width="370"
+                height="294"
+              />
+              <div class="project-text">
+                <h3 class="project-title">Ресторан <span lang="en">Seafood</span></h3>
+                <p class="project-description">Приложение</p>
+              </div>
+            </li>
+            <li class="project">
+              <img src="./images/portfolio-4.jpg" alt="чёрные наушники" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title">Проект <span lang="en">Prime</span></h3>
+                <p class="project-description">Маркетинг</p>
+              </div>
+            </li>
+            <li class="project">
+              <img src="./images/portfolio-5.jpg" alt="две коробочки" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title">Проект <span lang="en">Boxes</span></h3>
+                <p class="project-description">Приложение</p>
+              </div>
+            </li>
+            <li class="project">
+              <img src="./images/portfolio-6.jpg" alt="сайт на мониторе" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title" lang="en">Inspiration has no Borders</h3>
+                <p class="project-description">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="project">
+              <img src="./images/portfolio-7.jpg" alt="открытая книга" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title">Издание <span lang="en">Limited Edition</span></h3>
+                <p class="project-description">Дизайн</p>
+              </div>
+            </li>
+            <li class="project">
+              <img src="./images/portfolio-8.jpg" alt="бирка на шнурке" width="370" height="294" />
+              <div class="project-text">
+                <h3 class="project-title">Проект <span lang="en">LAB</span></h3>
+                <p class="project-description">Маркетинг</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/portfolio-9.jpg"
+                alt="руки на клавиатуре ноутбука"
+                width="370"
+                height="294"
+              />
+              <div class="project-text">
+                <h3 class="project-title" lang="en">Growing Business</h3>
+                <p class="project-description">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
-      <a class="logo link" href="">Web<span class="footer-logo">Studio</span></a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="map-link link"
-              href="https://goo.gl/maps/sKyNyaU12oT2qco99"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo link" href="">Web<span class="footer-logo">Studio</span></a>
+        <address>
+          <ul class="address-list list">
+            <li class="address-list-item">
+              <a
+                class="map-link link"
+                href="https://goo.gl/maps/sKyNyaU12oT2qco99"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-list-item">
+              <a class="contact-number link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
