убирает padding-top секции "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="business section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="business list">
+          <ul class="business-list list">
             <li>
               <img src="./images/img-1.jpg" alt="разработчик пишет код" width="370" height="294" />
             </li>
